style: address sonar findings in getOnTypeFormatting
- java:S6212 — local variable `position` объявлен через `var`;
- java:S6204 — `Stream.collect(Collectors.toList())` заменён на `Stream.toList()`
  (полученный список используется только на чтение).